--- a/src/i18n/config/zh-cn.json
+++ b/src/i18n/config/zh-cn.json
@@ -18,6 +18,18 @@
           "3": "写代码"
         }
       }
+    },
+    "TagBar": {
+      "1": "后端",
+      "2": "前端",
+      "3": "Android",
+      "4": "IOS",
+      "5": "人工智能",
+      "6": "开发工具",
+      "7": "代码生活",
+      "8": "阅读",
+      "9": "综合",
+      "10": "关注"
     }
   }
 }
