--- a/src/i18n/config/zh-cn.json
+++ b/src/i18n/config/zh-cn.json
@@ -1,35 +1,49 @@
 {
-  "Main": {
-    "TopBar": {
-      "title": "稀土掘金",
-      "list": {
-        "1": "主页",
-        "2": "问答",
-        "3": "专栏",
-        "4": "标签",
-        "5": "发现"
-      },
-      "hint": "请输入关键字",
-      "DropDownMenu": {
-        "title": "创作者中心",
-        "menu": {
-          "1": "写文章",
-          "2": "写笔记",
-          "3": "写代码"
-        }
-      }
-    },
-    "TagBar": {
-      "1": "后端",
-      "2": "前端",
-      "3": "Android",
-      "4": "IOS",
-      "5": "人工智能",
-      "6": "开发工具",
-      "7": "代码生活",
-      "8": "阅读",
-      "9": "综合",
-      "10": "关注"
-    }
-  }
+	"Main": {
+		"TopBar": {
+			"title": "稀土掘金",
+			"list": {
+				"1": "主页",
+				"2": "问答",
+				"3": "专栏",
+				"4": "标签",
+				"5": "发现"
+			},
+			"hint": "请输入关键字",
+			"DropDownMenu": {
+				"title": "创作者中心",
+				"menu": {
+					"1": "写文章"
+				}
+			}
+		},
+		"TagBar": {
+			"1": "后端",
+			"2": "前端",
+			"3": "Android",
+			"4": "IOS",
+			"5": "人工智能",
+			"6": "开发工具",
+			"7": "代码生活",
+			"8": "阅读",
+			"9": "综合",
+			"10": "关注"
+		},
+		"Article": {
+			"FilterList": {
+				"1": "推荐",
+				"2": "最新",
+				"3": "热榜"
+			},
+			"HotTag": {
+				"title": "热门标签"
+			},
+			"HotContent": {
+				"title": "精彩内容"
+			}
+		}
+	},
+	"Editor": {
+		"placeholder": "请输入你的文章标题..."
+	}
 }
