--- a/src/i18n/config/zh-cn.json
+++ b/src/i18n/config/zh-cn.json
@@ -41,9 +41,38 @@
 			"HotContent": {
 				"title": "精彩内容"
 			}
+		},
+		"Login": {
+			"title": "登录后畅想更多权益",
+			"value": "登录",
+			"ways": {
+				"1": "密码登录",
+				"2": "验证码登录",
+				"3": "扫码登录",
+				"4": "忘记密码",
+				"5": "其他登录"
+			},
+			"addonBefore": {
+				"1": "中国"
+			},
+			"inputHint": {
+				"password": {
+					"1": "请输入邮箱/手机号",
+					"2": "请输入密码"
+				},
+				"code": {
+					"1": "请输入手机号",
+					"2": "请输入验证码",
+					"3": "获取验证码"
+				}
+			}
 		}
 	},
 	"Editor": {
-		"placeholder": "请输入你的文章标题..."
+		"placeholder": "请输入你的文章标题...",
+		"action": {
+			"1": "发布",
+			"2": "存草稿"
+		}
 	}
 }
