--- a/src/i18n/config/zh-cn.json
+++ b/src/i18n/config/zh-cn.json
@@ -44,7 +44,7 @@
 		},
 		"Login": {
 			"title": "登录后畅想更多权益",
-			"value": "登录",
+			"value": "登录/注册",
 			"ways": {
 				"1": "密码登录",
 				"2": "验证码登录",
